# building-generative-ai-services

./: .gitignore  Makefile  README.md  client.py  curl.md  dependencies.py  llm_client.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  settings.py  upload.py  utils.py
.clinerules/: CLINE.md
rag/: __init__.py  constants.py  extractor.py  repository.py  service.py  transform.py
tests/: conftest.py  test_llm_client.py  test_llm_client_dummy.py  test_llm_client_spy.py  test_retrieve.py
tests/e2e/: test_rag_e2e.py  test_upload_file.py
tests/integration/: README.md  test_auto_evaluation.py  test_directional_expectation.py  test_llm.py  test_minimum_functionality.py  test_prompt_variants_readability.py  test_rag_retrieval.py  test_retrieval_subsystem.py  test_self_check_toxicity.py  test_tool_selection.py
tests/llm/: test_llm_client.py  test_llm_client_dummy.py  test_llm_client_fake.py  test_llm_client_mock.py  test_llm_client_spy.py  test_llm_client_stub.py
tests/rag/: test_data.json  test_transform.py
