[project]
name = "building-generative-ai-services"
version = "1.0.0"
description = "A FastAPI-based web server providing generative AI services including text generation, image generation, RAG, and PDF document processing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastapi==0.104.1",
    "python-dotenv==1.0.0",
    "openai==2.33.0",
    "loguru==0.7.3",
    "aiofiles==25.1.0",
    "sentence-transformers==5.1.2",
    "pydantic==2.13.3",
    "pydantic-settings==2.11.0",
    "aiohttp==3.9.3",
    "beautifulsoup4==4.10.0",
    "lxml==4.6.3",
    "torch==2.2.2",
    "transformers==4.57.6",
    "diffusers==0.36.0",
    "Pillow==11.3.0",
    "tiktoken==0.9.0",
    "pypdf==6.10.2",
    "qdrant-client==1.16.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "uvicorn>=0.24.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"